upperbar is almost finished, navigation and routing left

--- a/src/index.small.css
+++ b/src/index.small.css
@@ -6,6 +6,8 @@
         margin: 0;
         font-family: "Quicksand", 'Trebuchet MS';
         background-image: url("../public/background.png");
+        background-image: url("../public/background.png");
+        background-size: 100%;
       }
       .App {
         height: 100%;
@@ -22,6 +24,10 @@
         padding: 7px;
         margin-bottom: 30px;
       }
+      #logo {
+        border-radius: 20px;
+      }
+      
       .lowerbarDiv {
         min-height: 80vh;
         margin-top: 20px;
@@ -46,7 +52,7 @@
         width: 260px;
         font-size: 17px;
         padding: 3px;
-        background-color: #242329;
+        background-color: #37363d;
         color: #fcfcfc;
         border: 2px whitesmoke solid;
         border-radius: 8px; 
@@ -60,7 +66,7 @@
       }
       
       .upperbarLogoDiv {
-        max-width:90%;
+        max-width:85%;
         margin: auto;
       }
       #logo {
@@ -68,16 +74,6 @@
         max-height:90%;
       }
       
-      .footerDiv{
-        text-align: center;
-        font-size: 14px;
-        padding-top: 3px;
-        font-style: italic;
-        font-family: 'Trebuchet MS', sans-serif;
-        min-height: 3vh;
-        background-color: #b2beb5;
-        margin-top: 5px;
-      }
       .contractDetailsDiv {
         white-space: pre-wrap;
         word-wrap: break-word;   
