--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@ body {
   margin: 0;
   font-family: "Quicksand", 'Trebuchet MS';
   background-image: url("../public/background.png");
-  background-repeat: no-repeat;
   background-size: 100%;
 }
 .App {
@@ -24,6 +23,10 @@ body {
   border-bottom-left-radius: 9px;
   border-bottom-right-radius: 9px;
   margin-bottom: 30px;
+}
+
+#logo {
+  border-radius: 20px;
 }
 .lowerbarDiv {
   min-height: 70vh;
@@ -55,7 +58,7 @@ body {
   width: 250px;
   font-size: 24px;
   padding: 6px;
-  background-color: #242329;
+  background-color: #37363d;
   color: #fcfcfc;
   border: 2px whitesmoke solid;
   border-radius: 8px; 
@@ -72,17 +75,6 @@ body {
   cursor: pointer;
 }
 
-.footerDiv{
-  text-align: center;
-  font-size: 14px;
-  padding-top: 3px;
-  font-style: italic;
-  font-family: 'Trebuchet MS', sans-serif;
-  min-height: 3vh;
-  background-color: #b2beb5;
-  margin-top: 5px;
-  opacity: 0.3;
-}
 
 .contractDetailsDiv span {
   font-family: "Oswald", sans-serif;
