--- a/src/index.small.css
+++ b/src/index.small.css
@@ -36,7 +36,7 @@
         padding: 10px;
       }
       
-      .mainLowDiv {
+      .mainTokenDiv {
         display: flex;
         flex-direction: column;
       }
