code reffactored, tokenA and tokenB finished

--- a/src/index.small.css
+++ b/src/index.small.css
@@ -249,4 +249,9 @@
         -moz-appearance: textfield;
       }
 
+      /*span in token area*/
+      .spanTokens {
+        margin-left: 14px;
+      }
+
 }
