--- a/src/index.css
+++ b/src/index.css
@@ -261,3 +261,23 @@ input[type=number] {
 }
 
 
+.button10 {
+  background-color: aquamarine;
+  font-size: 21px;
+  padding: 4px;
+  border-radius: 5px;
+  width: 220px;
+  cursor: pointer;
+  transition-duration: 0.3s;
+  margin-bottom: 10px;
+}
+.button10:hover {
+  background-color: lightseagreen;
+  font-weight: bolder;
+}
+.button10:active {
+  box-shadow: 0 2px #666;
+  transform: translateY(2px);
+  box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
+}
+
