add liquidity component is finished

--- a/src/index.css
+++ b/src/index.css
@@ -262,7 +262,7 @@ input[type=number] {
 
 
 .button10 {
-  background-color: aquamarine;
+  background-color: #67de52;
   font-size: 21px;
   padding: 4px;
   border-radius: 5px;
@@ -272,7 +272,7 @@ input[type=number] {
   margin-bottom: 10px;
 }
 .button10:hover {
-  background-color: lightseagreen;
+  background-color: rgb(21, 160, 51);
   font-weight: bolder;
 }
 .button10:active {
