if statements improved by adding return in the proper places

--- a/src/index.css
+++ b/src/index.css
@@ -281,3 +281,7 @@ input[type=number] {
   box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
 }
 
+#aboutText {
+  margin-top: 110px;
+}
+
