--- a/src/index.small.css
+++ b/src/index.small.css
@@ -274,4 +274,7 @@
         transform: translateY(2px);
         box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
       }
+      #aboutText {
+        margin-top: 120px;
+      }
 }
