--- a/src/index.small.css
+++ b/src/index.small.css
@@ -182,6 +182,7 @@
       
       .button9 {
         background-color: aquamarine;
+        margin-top: 10px;
         font-size: 21px;
         padding: 4px;
         border-radius: 5px;
@@ -212,8 +213,10 @@
         background: #FCFCFD;
         box-shadow: 0px 2px 4px rgb(45 35 66 / 40%), 0px 7px 13px -3px rgb(45 35 66 / 30%), inset 0px -3px 0px #d6d6e7;
         height: 33px;
-        padding: 0 20px;
-        font-size: 16px;
+        margin-top: 10px;
+        padding: 0 4px;
+        width: 115px;
+        font-size: 14px;
         border-radius: 6px;
         color: #36395a;
         transition: box-shadow 0.15s ease,transform 0.15s ease;
@@ -230,8 +233,8 @@
 
       .inputFields {
         height: 27px;
-        width: 130px;
-        margin-left: 12px;
+        width: 100px;
+        margin-left: 5px;
         border-radius: 5px;
       }
       .inputFields:focus {
@@ -257,6 +260,7 @@
       .button10 {
         background-color: aquamarine;
         font-size: 21px;
+        margin-top: 20px;
         padding: 4px;
         border-radius: 5px;
         min-width: 70vw !important;
